include/dss_capi.h

    /*! 
    Average interruption duration, hr.
    */
    DSS_CAPI_DLL double Bus_Get_Int_Duration(void);
    /*! 
    Accumulated failure rate downstream from this bus; faults per year
    */
    DSS_CAPI_DLL double Bus_Get_Lambda(void);
    /*! 
    Accumulated customer outage durations
    */
    DSS_CAPI_DLL double Bus_Get_Cust_Duration(void);
    /*! 
    Annual number of customer-interruptions from this bus
    */
    DSS_CAPI_DLL double Bus_Get_Cust_Interrupts(void);
    /*! 
    Total numbers of customers served downline from this bus
    */
    DSS_CAPI_DLL int32_t Bus_Get_N_Customers(void);
    /*! 
    Number of interruptions this bus per year
    */
    DSS_CAPI_DLL double Bus_Get_N_interrupts(void);
    /*! 
    Returns Complex array of pu L-L voltages for 2- and 3-phase buses. Returns -1.0 for 1-phase bus. If more than 3 phases, returns only 3 phases.
    */
    DSS_CAPI_DLL void Bus_Get_puVLL(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVLL but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_puVLL_GR(void);
    /*! 
    For 2- and 3-phase buses, returns array of complex numbers representing L-L voltages in volts. Returns -1.0 for 1-phase bus. If more than 3 phases, returns only first 3.
    */
    DSS_CAPI_DLL void Bus_Get_VLL(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_VLL but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_VLL_GR(void);
    /*! 
    Array of doubles containing voltage magnitude, angle (degrees) pairs in per unit
    */
    DSS_CAPI_DLL void Bus_Get_puVmagAngle(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVmagAngle but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_puVmagAngle_GR(void);
    /*! 
    Array of doubles containing voltages in Magnitude (VLN), angle (degrees)
    */
    DSS_CAPI_DLL void Bus_Get_VMagAngle(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_VMagAngle but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_VMagAngle_GR(void);
    /*! 
    Total length of line downline from this bus, in miles. For recloser siting algorithm.
    */
    DSS_CAPI_DLL double Bus_Get_TotalMiles(void);
    /*! 
    Integer ID of the feeder section in which this bus is located.
    */
    DSS_CAPI_DLL int32_t Bus_Get_SectionID(void);