src/v7/CAPI_Bus.pas


//------------------------------------------------------------------------------
function Bus_Get_Int_Duration():Double;cdecl;
begin
  Result := 0.0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].Bus_Int_Duration;
end;
//------------------------------------------------------------------------------
function Bus_Get_Lambda():Double;cdecl;
begin
  Result := 0.0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].BusFltRate;
end;
//------------------------------------------------------------------------------
function Bus_Get_Cust_Duration():Double;cdecl;
begin
  Result := 0.0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].BusCustDurations ;
end;
//------------------------------------------------------------------------------
function Bus_Get_Cust_Interrupts():Double;cdecl;
begin
  Result := 0.0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].BusCustDurations ;
end;
//------------------------------------------------------------------------------
function Bus_Get_N_Customers():Integer;cdecl;
begin
  Result := 0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].BusTotalNumCustomers  ;
end;
//------------------------------------------------------------------------------
function Bus_Get_N_interrupts():Double;cdecl;
begin
  Result := 0.0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].Bus_Num_Interrupt ;
end;
//------------------------------------------------------------------------------
PROCEDURE Bus_Get_puVLL(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
  Nvalues,i,  iV, NodeIdxi, NodeIdxj, jj : Integer;
  Volts : Complex;
  pBus : TDSSBus;
  BaseFactor : double;

Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus    := Buses^[ActiveBusIndex];
      Nvalues := pBus.NumNodesThisBus;
      If Nvalues > 3 Then Nvalues := 3;

      If Nvalues > 1 Then
      Begin
          If Nvalues = 2 Then  Nvalues := 1;  // only one L-L voltage if 2 phase
          Result  := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
          iV := 0;
          WITH pBus DO
          Begin
            If kVBase>0.0 Then BaseFactor := 1000.0*kVBase*sqrt3
                          Else BaseFactor := 1.0;
            FOR i := 1 to  NValues DO     // for 2- or 3-phases
            Begin
                  // this code assumes the nodes are ordered 1, 2, 3
                  NodeIdxi := FindIdx(i);  // Get the index of the Node that matches i
                  jj := i+1;
                  if jj>3 then jj := 1; // wrap around
                  NodeIdxj := FindIdx(jj);

                  With Solution Do Volts := Csub(NodeV^[GetRef(NodeIdxi)], NodeV^[GetRef(NodeIdxj)]);
                  Result[iV] := Volts.re / BaseFactor;
                  Inc(iV);
                  Result[iV] := Volts.im / BaseFactor;
                  Inc(iV);
            End;
          End;  {With pBus}
      End
      ELSE Begin  // for 1-phase buses, do not attempt to compute.
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (1) + 1);  // just return -1's in array
          Result[0] := -99999.0;
          Result[1] := 0.0;
      End;
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array


end;
PROCEDURE Bus_Get_puVLL_GR();cdecl;
// Same as Bus_Get_puVLL but uses global result (GR) pointers
begin
   Bus_Get_puVLL(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_VLL(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
  Nvalues,i,  iV, NodeIdxi, NodeIdxj, jj : Integer;
  Volts : Complex;
  pBus : TDSSBus;

Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus    := Buses^[ActiveBusIndex];
      Nvalues := pBus.NumNodesThisBus;
      If Nvalues > 3 Then Nvalues := 3;

      If Nvalues > 1 Then
      Begin
          If Nvalues = 2 Then  Nvalues := 1;  // only one L-L voltage if 2 phase
          Result  := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
          iV := 0;
          WITH pBus DO
            FOR i := 1 to  NValues DO     // for 2- or 3-phases
            Begin

                  // this code assumes the nodes are ordered 1, 2, 3
                  // this code so nodes come out in order from smallest to largest
                  NodeIdxi := FindIdx(i);  // Get the index of the Node that matches i
                  jj := i+1;
                  if jj>3 then jj := 1; // wrap around
                  NodeIdxj := FindIdx(jj);

                  With Solution Do Volts := Csub(NodeV^[GetRef(NodeIdxi)], NodeV^[GetRef(NodeIdxj)]);
                  Result[iV] := Volts.re;
                  Inc(iV);
                  Result[iV] := Volts.im;
                  Inc(iV);
            End;
      End
      ELSE Begin  // for 1-phase buses, do not attempt to compute.
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (1) + 1);  // just return -1's in array
          Result[0] := -99999.0;
          Result[1] := 0.0;
      End;
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Bus_Get_VLL_GR();cdecl;
// Same as Bus_Get_VLL but uses global result (GR) pointers
begin
   Bus_Get_VLL(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_puVmagAngle(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return mag/angle for all nodes of voltages for Active Bus
VAR
  Result: PDoubleArray;
  Nvalues,i,  iV, NodeIdx, jj : Integer;
  Volts : polar;
  pBus : TDSSBus;
  Basefactor : Double;

Begin

   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus    := Buses^[ActiveBusIndex];
      Nvalues := pBus.NumNodesThisBus;
      Result  := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
      iV := 0;
      jj := 1;
      WITH pBus DO Begin
          If kVBase>0.0 Then BaseFactor := 1000.0 * kVBase
                        Else BaseFactor := 1.0;

          FOR i := 1 to  NValues DO
          Begin
                // this code so nodes come out in order from smallest to larges
                Repeat
                      NodeIdx := FindIdx(jj);  // Get the index of the Node that matches jj
                      inc(jj)
                Until NodeIdx>0;

                Volts      := ctopolardeg(Solution.NodeV^[GetRef(NodeIdx)]);  // referenced to pBus
                Result[iV] := Volts.mag / BaseFactor;
                Inc(iV);
                Result[iV] := Volts.ang;
                Inc(iV);
          End;
      End;
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Bus_Get_puVmagAngle_GR();cdecl;
// Same as Bus_Get_puVmagAngle but uses global result (GR) pointers
begin
   Bus_Get_puVmagAngle(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_VMagAngle(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Return mag/angle for all nodes of voltages for Active Bus
VAR
  Result: PDoubleArray;
  Nvalues,i,  iV, NodeIdx, jj : Integer;
  Volts : polar;
  pBus : TDSSBus;

Begin

   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus    := Buses^[ActiveBusIndex];
      Nvalues := pBus.NumNodesThisBus;
      Result  := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
      iV := 0;
      jj := 1;
      WITH pBus DO
      FOR i := 1 to  NValues DO
      Begin
            // this code so nodes come out in order from smallest to larges
            Repeat
                 NodeIdx := FindIdx(jj);  // Get the index of the Node that matches jj
                 inc(jj)
            Until NodeIdx>0;

            Volts      := ctopolardeg(Solution.NodeV^[GetRef(NodeIdx)]);  // referenced to pBus
            Result[iV] := Volts.mag;
            Inc(iV);
            Result[iV] := Volts.ang;
            Inc(iV);
      End;
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Bus_Get_VMagAngle_GR();cdecl;
// Same as Bus_Get_VMagAngle but uses global result (GR) pointers
begin
   Bus_Get_VMagAngle(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Bus_Get_TotalMiles():Double;cdecl;
begin
  Result := 0.0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].BusTotalMiles  ;
end;
//------------------------------------------------------------------------------
function Bus_Get_SectionID():Integer;cdecl;
begin
  Result := 0;
  if ActiveCircuit <> Nil then
    With ActiveCircuit Do
      if ActiveBusIndex > 0 then
         Result := Buses^[ActiveBusIndex].BusSectionID  ;
end;
//------------------------------------------------------------------------------
END.
